fix spacing error in editor picks section

--- a/css/style.css
+++ b/css/style.css
@@ -477,7 +477,7 @@ i.fa-tumblr {
   }
 
   .editor-pick article {
-    flex-basis: 300px;
+    flex-basis: 330px;
   }
 
   .newsletter-container .spacer2 {
